--- a/WindWaker/Base.lproj/Main.storyboard
+++ b/WindWaker/Base.lproj/Main.storyboard
@@ -1,24 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Dis-fj-pyF">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Weather View Controller-->
+        <scene sceneID="zEU-Uf-llH">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="Dis-fj-pyF" customClass="WeatherViewController" customModule="WindWaker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9vB-X4-ksy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EfL-mm-TDP">
+                                <rect key="frame" x="0.0" y="75.5" width="375" height="467"/>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pVw-3O-1Zr">
+                                    <size key="itemSize" width="372" height="460"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="weatherCell" id="sYX-Uj-zid" customClass="WeatherCollectionViewCell" customModule="WindWaker" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="3.5" width="372" height="460"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="372" height="460"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uaa-ho-XpM">
+                                                    <rect key="frame" x="74.5" y="23" width="223" height="276"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PNM-DC-Yrd">
+                                                    <rect key="frame" x="165" y="327" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="Uaa-ho-XpM" firstAttribute="centerX" secondItem="sYX-Uj-zid" secondAttribute="centerX" id="53t-MA-yH2"/>
+                                            <constraint firstItem="Uaa-ho-XpM" firstAttribute="centerY" secondItem="sYX-Uj-zid" secondAttribute="centerY" multiplier="0.7" id="5Yo-RJ-x6G"/>
+                                            <constraint firstItem="Uaa-ho-XpM" firstAttribute="height" secondItem="sYX-Uj-zid" secondAttribute="height" multiplier="0.6" id="d1x-ud-zmP"/>
+                                            <constraint firstItem="Uaa-ho-XpM" firstAttribute="width" secondItem="sYX-Uj-zid" secondAttribute="width" multiplier="0.6" id="ySv-ZQ-ZUh"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="maxTempLabel" destination="PNM-DC-Yrd" id="QIQ-ZX-odP"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="EfL-mm-TDP" firstAttribute="height" secondItem="9vB-X4-ksy" secondAttribute="height" multiplier="0.7" id="Ii7-BD-R7Y"/>
+                            <constraint firstItem="EfL-mm-TDP" firstAttribute="centerY" secondItem="6KT-Cz-60d" secondAttribute="centerY" multiplier="0.9" id="TT6-bl-z9E"/>
+                            <constraint firstItem="EfL-mm-TDP" firstAttribute="centerX" secondItem="6KT-Cz-60d" secondAttribute="centerX" id="pLl-cl-ZvU"/>
+                            <constraint firstItem="EfL-mm-TDP" firstAttribute="width" secondItem="9vB-X4-ksy" secondAttribute="width" id="wWO-0U-0IR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6KT-Cz-60d"/>
                     </view>
+                    <connections>
+                        <outlet property="weatherCV" destination="EfL-mm-TDP" id="7LY-bx-vIT"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5l9-ub-daO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="196" y="215.44227886056973"/>
         </scene>
     </scenes>
 </document>
