--- a/WindWaker/Base.lproj/Main.storyboard
+++ b/WindWaker/Base.lproj/Main.storyboard
@@ -19,43 +19,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EfL-mm-TDP">
-                                <rect key="frame" x="0.0" y="75.5" width="375" height="467"/>
-                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="EfL-mm-TDP">
+                                <rect key="frame" x="0.0" y="20" width="375" height="534"/>
+                                <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pVw-3O-1Zr">
-                                    <size key="itemSize" width="372" height="460"/>
+                                    <size key="itemSize" width="342" height="496"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="weatherCell" id="sYX-Uj-zid" customClass="WeatherCollectionViewCell" customModule="WindWaker" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="3.5" width="372" height="460"/>
+                                        <rect key="frame" x="0.0" y="19" width="342" height="496"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="372" height="460"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="496"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uaa-ho-XpM">
-                                                    <rect key="frame" x="74.5" y="23" width="223" height="276"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="maxT" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PNM-DC-Yrd">
+                                                    <rect key="frame" x="8" y="333" width="364" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMR-BC-env">
+                                                    <rect key="frame" x="9" y="308" width="332" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="minT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ew5-Za-4JI">
+                                                    <rect key="frame" x="10" y="354" width="332" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Weekday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbA-3X-FMt">
+                                                    <rect key="frame" x="7" y="288" width="332" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uaa-ho-XpM">
+                                                    <rect key="frame" x="75" y="20" width="223" height="258.5"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PNM-DC-Yrd">
-                                                    <rect key="frame" x="8" y="327" width="364" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMR-BC-env">
-                                                    <rect key="frame" x="7" y="360" width="332" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="Uaa-ho-XpM" firstAttribute="centerX" secondItem="sYX-Uj-zid" secondAttribute="centerX" id="53t-MA-yH2"/>
                                             <constraint firstItem="Uaa-ho-XpM" firstAttribute="centerY" secondItem="sYX-Uj-zid" secondAttribute="centerY" multiplier="0.7" id="5Yo-RJ-x6G"/>
@@ -70,11 +84,11 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hF-JX-PiZ">
-                                <rect key="frame" x="16" y="586" width="339" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hF-JX-PiZ">
+                                <rect key="frame" x="0.0" y="554" width="375" height="113"/>
+                                <color key="backgroundColor" red="0.35796440972222221" green="0.45641441261851851" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Celcius">
-                                    <color key="titleColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="unitSwitchPressed:" destination="Dis-fj-pyF" eventType="touchUpInside" id="aS6-uC-lBl"/>
@@ -83,10 +97,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="EfL-mm-TDP" firstAttribute="height" secondItem="9vB-X4-ksy" secondAttribute="height" multiplier="0.7" id="Ii7-BD-R7Y"/>
-                            <constraint firstItem="EfL-mm-TDP" firstAttribute="centerY" secondItem="6KT-Cz-60d" secondAttribute="centerY" multiplier="0.9" id="TT6-bl-z9E"/>
+                            <constraint firstItem="6KT-Cz-60d" firstAttribute="trailing" secondItem="3hF-JX-PiZ" secondAttribute="trailing" id="0Am-q7-3sb"/>
+                            <constraint firstItem="EfL-mm-TDP" firstAttribute="height" secondItem="9vB-X4-ksy" secondAttribute="height" multiplier="0.8" id="Ii7-BD-R7Y"/>
+                            <constraint firstItem="3hF-JX-PiZ" firstAttribute="top" secondItem="EfL-mm-TDP" secondAttribute="bottom" id="ZUt-y0-N4C"/>
+                            <constraint firstItem="3hF-JX-PiZ" firstAttribute="leading" secondItem="6KT-Cz-60d" secondAttribute="leading" id="cwN-u8-iHr"/>
                             <constraint firstItem="EfL-mm-TDP" firstAttribute="centerX" secondItem="6KT-Cz-60d" secondAttribute="centerX" id="pLl-cl-ZvU"/>
+                            <constraint firstItem="6KT-Cz-60d" firstAttribute="bottom" secondItem="3hF-JX-PiZ" secondAttribute="bottom" id="vKX-nT-PeF"/>
                             <constraint firstItem="EfL-mm-TDP" firstAttribute="width" secondItem="9vB-X4-ksy" secondAttribute="width" id="wWO-0U-0IR"/>
+                            <constraint firstItem="EfL-mm-TDP" firstAttribute="top" secondItem="6KT-Cz-60d" secondAttribute="top" id="ywS-gU-Ods"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6KT-Cz-60d"/>
                     </view>
